Replace ExternalFilterAuthorizationVoter with ExternalFilterAuthorizationManager