@@ -11,123 +11,124 @@ import com.czertainly.core.security.authz.opa.dto.OpaResourceAccessResult;
 import com.czertainly.core.service.AuditLogService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.Setter;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.authorization.AuthorizationDecision;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.web.FilterInvocation;
+import org.springframework.security.web.access.intercept.RequestAuthorizationContext;
 import org.springframework.security.web.authentication.WebAuthenticationDetails;
 import org.springframework.security.web.util.matcher.RequestMatcher;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
-public class ExternalFilterAuthorizationVoter extends AbstractExternalAuthorizationVoter<FilterInvocation> {
+public class ExternalFilterAuthorizationManager extends AbstractExternalAuthorizationManager<RequestAuthorizationContext> {
 
-    protected final Log logger = LogFactory.getLog(this.getClass());
+    protected final Log log = LogFactory.getLog(this.getClass());
 
     private final OpaClient opaClient;
 
     private final ObjectMapper om;
 
+    @Setter
     private RequestMatcher toAuthorizeRequestsMatcher;
 
+    @Setter
     private RequestMatcher doNotAuthorizeAnonymousRequestsMatcher;
 
     private final AuditLogService auditLogService;
 
-    public ExternalFilterAuthorizationVoter(@Autowired OpaClient opaClient, @Autowired ObjectMapper om, @Autowired AuditLogService auditLogService) {
+    public ExternalFilterAuthorizationManager(@Autowired OpaClient opaClient, @Autowired ObjectMapper om, @Autowired AuditLogService auditLogService) {
         this.opaClient = opaClient;
         this.om = om;
         this.auditLogService = auditLogService;
     }
 
-    @Override
-    public boolean supports(Class clazz) {
-        return FilterInvocation.class.isAssignableFrom(clazz);
-    }
 
     @Override
-    protected int voteInternal(CzertainlyAuthenticationToken authentication, FilterInvocation fi, List<ExternalAuthorizationConfigAttribute> attributes) {
+    protected AuthorizationDecision voteInternal(CzertainlyAuthenticationToken authentication, RequestAuthorizationContext requestAuthorizationContext) {
         OpaRequestDetails opaDetails = null;
-        if (authentication.getDetails() instanceof WebAuthenticationDetails) {
-            String remoteAddress = ((WebAuthenticationDetails) authentication.getDetails()).getRemoteAddress();
+        if (authentication.getDetails() instanceof WebAuthenticationDetails webAuthenticationDetails) {
+            String remoteAddress = webAuthenticationDetails.getRemoteAddress();
             opaDetails = new OpaRequestDetails(remoteAddress);
         }
-        return this.vote(authentication.getPrincipal().getRawData(), fi, opaDetails);
+        return this.vote(authentication.getPrincipal().getRawData(), requestAuthorizationContext, opaDetails);
     }
 
     @Override
-    protected int voteInternal(AnonymousAuthenticationToken authentication, FilterInvocation fi, List<ExternalAuthorizationConfigAttribute> attributes) {
+    protected AuthorizationDecision voteInternal(AnonymousAuthenticationToken authentication, RequestAuthorizationContext requestAuthorizationContext) {
         OpaRequestDetails opaDetails = null;
-        if (authentication.getDetails() instanceof WebAuthenticationDetails) {
-            String remoteAddress = ((WebAuthenticationDetails) authentication.getDetails()).getRemoteAddress();
+        if (authentication.getDetails() instanceof WebAuthenticationDetails webAuthenticationDetails) {
+            String remoteAddress = webAuthenticationDetails.getRemoteAddress();
             opaDetails = new OpaRequestDetails(remoteAddress);
         }
         try {
-            return this.vote(om.writeValueAsString(new AnonymousPrincipal(authentication.getName())), fi, opaDetails);
+            return this.vote(om.writeValueAsString(new AnonymousPrincipal(authentication.getName())), requestAuthorizationContext, opaDetails);
         } catch (JsonProcessingException e) {
-            logger.error("An error occurred during voting. Access will be denied.", e);
-            return ACCESS_DENIED;
+            log.error("An error occurred during voting. Access will be denied.", e);
+            return new AuthorizationDecision(false);
         }
     }
 
-    private int vote(String principal, FilterInvocation fi, OpaRequestDetails details) {
+    private AuthorizationDecision vote(String principal, RequestAuthorizationContext requestAuthorizationContext, OpaRequestDetails details) {
+        String requestUrl = requestAuthorizationContext.getRequest().getRequestURL().toString();
         try {
-            List<String> urlParts = Arrays.stream(fi.getRequestUrl()
+            List<String> urlParts =
+                    Arrays.stream(requestUrl
                             .split("/"))
                     .filter(p -> !p.isBlank())
-                    .collect(Collectors.toList());
+                    .toList();
 
             OpaRequestedResource resource = new OpaRequestedResource(urlParts);
 
 
             OpaResourceAccessResult result = this.checkAccess(principal, resource, details);
             if (result.isAuthorized()) {
-                logger.trace(
+                log.trace(
                         String.format(
                                 "Access to the endpoint '%s' has been granted by the following rules [%s].",
-                                fi.getRequestUrl(),
+                                requestUrl,
                                 String.join(",", result.getAllow())
                         )
                 );
-                return ACCESS_GRANTED;
+                return new AuthorizationDecision(true);
             } else {
-                String message = "Access to the endpoint '%s' has been denied.".formatted(fi.getRequestUrl());
+                String message = "Access to the endpoint '%s' has been denied.".formatted(requestUrl);
                 auditLogService.logAuthentication(Operation.AUTHENTICATION, OperationResult.FAILURE, message, null);
-                return ACCESS_DENIED;
+                return new AuthorizationDecision(false);
             }
         } catch (Exception e) {
-            String message = "Unable verify access to the endpoint '%s'. Voting to deny access.".formatted(fi.getRequestUrl());
+            String message = "Unable verify access to the endpoint '%s'. Voting to deny access.".formatted(requestUrl);
             auditLogService.logAuthentication(Operation.AUTHENTICATION, OperationResult.FAILURE, message, null);
-            logger.error(message, e);
-            return ACCESS_DENIED;
+            log.error(message, e);
+            return new AuthorizationDecision(false);
         }
     }
 
     @Override
-    protected boolean canDecide(Authentication auth, FilterInvocation fi) {
+    protected boolean canDecide(Authentication auth, RequestAuthorizationContext requestAuthorizationContext) {
         if (auth instanceof AnonymousAuthenticationToken) {
             // First to verify that the request was not explicitly excluded from the voting
-            boolean doNotAuthorize = doNotAuthorizeAnonymousRequestsMatcher != null && this.doNotAuthorizeAnonymousRequestsMatcher.matches(fi.getRequest());
+            boolean doNotAuthorize = doNotAuthorizeAnonymousRequestsMatcher != null && this.doNotAuthorizeAnonymousRequestsMatcher.matches(requestAuthorizationContext.getRequest());
             if (doNotAuthorize) {
-                logger.trace("Voter is set not to decide for the " + fi);
+                log.trace("Voter is set not to decide for the " + requestAuthorizationContext);
                 return false;
             }
 
             // For security reasons, we want to authorize all anonymous requests except those that were excluded in step one
-            logger.trace("Will vote because the request is authenticated as anonymous.");
+            log.trace("Will vote because the request is authenticated as anonymous.");
             return true;
         }
 
         // Finally, check if non-anonymous request should be authorized
-        boolean shouldAuthorize = toAuthorizeRequestsMatcher == null || this.toAuthorizeRequestsMatcher.matches(fi.getRequest());
+        boolean shouldAuthorize = toAuthorizeRequestsMatcher == null || this.toAuthorizeRequestsMatcher.matches(requestAuthorizationContext.getRequest());
         if (!shouldAuthorize) {
-            logger.trace("Voter can't decide for the " + fi);
+            log.trace("Voter can't decide for the " + requestAuthorizationContext);
         }
 
         return shouldAuthorize;
@@ -137,7 +138,7 @@ public class ExternalFilterAuthorizationVoter extends AbstractExternalAuthorizat
         try {
             return this.opaClient.checkResourceAccess(OpaPolicy.ENDPOINT.policyName, resource, principal, opaDetails);
         } catch (Exception e) {
-            logger.error(
+            log.error(
                     
                             "An error occurred during the authorization request to the OPA policy '%s'.".formatted(
                             OpaPolicy.ENDPOINT.policyName),
@@ -147,11 +148,4 @@ public class ExternalFilterAuthorizationVoter extends AbstractExternalAuthorizat
         }
     }
 
-    public void setToAuthorizeRequestsMatcher(RequestMatcher toAuthorizeRequestsMatcher) {
-        this.toAuthorizeRequestsMatcher = toAuthorizeRequestsMatcher;
-    }
-
-    public void setDoNotAuthorizeAnonymousRequestsMatcher(RequestMatcher doNotAuthorizeRequestsMatcher) {
-        this.doNotAuthorizeAnonymousRequestsMatcher = doNotAuthorizeRequestsMatcher;
-    }
 }
